add css to search id

--- a/src/style.css
+++ b/src/style.css
@@ -36,3 +36,9 @@
   text-align: right;
   background-color: teal;
 }
+#search {
+  padding: 5px;
+  font-size: 17px;
+  border: 2px solid rgb(128, 77, 0);
+  border-radius: 10px;
+}
