--- a/src/style.css
+++ b/src/style.css
@@ -33,12 +33,16 @@
 .rightnav {
   width: 50%;
   text-align: right;
+  margin-right: 150px;
+  border: black;
 }
 #search {
+  margin-top: 15px;
   padding: 5px;
   font-size: 17px;
   border: 2px solid rgb(128, 77, 0);
   border-radius: 10px;
+  margin-right: 10px;
 }
 .background {
   background: rgba(0, 0, 0, 0.7) url("../public/chicago.jpg");
@@ -51,4 +55,26 @@
   align-items: center;
   color: white;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  max-width: 50%;
+  margin: auto;
+  height: 70%;
+}
+.firstSection {
+  height: 100vh;
+}
+.firsthalf {
+  margin-top: 40px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.secondhalf {
+  width: 30%;
+}
+.secondhalf img {
+  border: 1px solid black;
+  border-radius: 100px;
+  width: 100%;
+  margin: auto;
 }
