--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,7 @@
   justify-content: center;
   position: sticky;
   top: 0;
+  height: 50px;
   cursor: pointer;
   background-color: rgb(17, 35, 70);
 }
@@ -38,9 +39,10 @@
   align-items: center;
 }
 .rightnav {
+  margin-top: 2px;
   width: 50%;
   text-align: right;
-  margin-right: 150px;
+  margin-right: 90px;
   border: black;
 }
 #search {
@@ -48,7 +50,7 @@
   font-size: 17px;
   border: 2px solid rgb(128, 77, 0);
   border-radius: 10px;
-  margin-right: 10px;
+  margin-right: 0px;
 }
 .background {
   background: rgba(0, 0, 0, 0.7) url("../public/chicago.jpg");
@@ -122,4 +124,8 @@
   margin: auto;
   max-width: 90%;
   font-family: "Volkhov", serif;
+}
+.thumbnail img {
+  border: 2px solid black;
+  border-radius: 15px;
 }
