--- a/src/style.css
+++ b/src/style.css
@@ -129,3 +129,19 @@
   border: 2px solid black;
   border-radius: 15px;
 }
+.contact {
+  background-color: aliceblue;
+  height: 34px;
+}
+.text-center {
+  text-align: center;
+}
+.form {
+  max-width: 344px;
+  margin: auto;
+}
+.form input {
+  width: 100%;
+  border: 2px solid green;
+  border-radius: 6px;
+}
