--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@
   border: black;
 }
 #search {
-  padding: 5px;
+  padding: 2px;
   font-size: 17px;
   border: 2px solid rgb(128, 77, 0);
   border-radius: 10px;
@@ -102,7 +102,8 @@
   cursor: pointer;
 }
 .btn-sm {
-  padding: 6px 10px;
+  margin-bottom: 9px;
+  padding: 2px 10px;
   vertical-align: middle;
 }
 
@@ -152,4 +153,15 @@
 }
 .btnDark {
   color: black;
+}
+.text-footer {
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  font-size: 25px;
+  color: white;
+}
+.bc {
+  background-color: rgba(0, 0, 0, 0.7);
+  height: 55px;
 }
